cc: Unflake LayerTreeHostScrollTestImplSideInvalidation.

Don't use num of draws to end test. The test assumed to see 4 draws
to correspond with 4 pending trees. Since the active tree resulting
from an impl-side pending tree can be merged with a new pending tree,
the number of draws may not always be equal to the number of pending
trees.

Bug: 749218
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ib000838f07b0b00537d037402122539ccb449985
Reviewed-on: https://chromium-review.googlesource.com/587871
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490547}
Former-commit-id: 5e40f323bc67b22cd168b14b019bd5dc1b48c973